# mlir-snitch-pass

./: CMakeLists.txt  LowerLinalgVectorAddToHw.cpp  README.md  lowered.mlir  main_test.c  snitch_hw_vector_add.c  snitch_hw_vector_add.h  vector_add_memref.mlir  vector_add_tensor.mlir
